# quickfix-playground

./: .clang-format  .gitignore  Application.cpp  Application.h  CMakeLists.txt  Makefile  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
.trunk/: trunk.yaml
